# practice-code

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
1560229_BTTL03/: 1560229_BTTL03.sln
1560229_BTTL03/ConnectionDB/: ConnectionDB.csproj  Program.cs  Provider.cs
1560229_BTTL03/ConnectionDB/Properties/: AssemblyInfo.cs
C++/LinkList/: LinkList.cpp  LinkList.hpp
C++/Practice-OOP/: Student.cpp  Student.hpp
C++/String/: String.cpp  String.hpp
C++/Vector/: Vector.cpp  Vector.hpp
C/LinkList/: LinkList.c  LinkList.h
Data Structures/AVL_Tree/: AVL_Tree.cpp  AVL_Tree.hpp
misc/: main-test.cpp
test/: LinkListTest.cpp  StringTest.cpp  Vector.cpp
